<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="8dp"
	android:background="@drawable/background">

	<!-- Hostel Caretakers -->
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1"

		android:layout_marginBottom="10dp">
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="#ffffff"
				android:text="@string/HCT"
				android:textSize="25sp"
				android:gravity="center"
				android:layout_span="3"/>
		</TableRow>
		<TableRow>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/H5"
				android:textColor="#ffffff" />

			<Button

				android:background="@android:color/transparent"
				android:gravity="center"
				android:onClick="callBrijesh"
				android:text="@string/HCall"
				android:textColor="#ffffff" />

			<Button

				android:background="@android:color/transparent"
				android:gravity="center"
				android:onClick="emailBrijesh"
				android:padding="3dip"
				android:text="@string/HEmail"
				android:textColor="#ffffff" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/H6" />
			<Button
				android:text="@string/HCall"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="callSantosh"
				android:gravity="center"
				 />
			<Button

				android:text="@string/HEmail"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="emailSantosh"
				android:gravity="center"
				 />
		</TableRow>
		<TableRow
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/H7" />
			<Button

				android:text="@string/HCall"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="callSatinder"
				android:gravity="center"
				 />
			<Button

				android:text="@string/HEmail"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="emailSatinder"
				android:gravity="center"
				 />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/H8" />
			<Button

				android:text="@string/HCall"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="callManoj"
				android:gravity="center"
				 />
			<Button

				android:text="@string/HEmail"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="emailManoj"
				android:gravity="center"
				 />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/H58" />
			<Button

				android:text="@string/HCall"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="callKalpana"
				android:gravity="center"
				android:layout_span="2"
				/>
		</TableRow>
	</TableLayout>

	<!-- Doctors and health -->
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1">
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="#ffffff"
				android:text="@string/doctors_and_medical_officers"
				android:textSize="25sp"
				android:gravity="center"
				android:layout_span="4"/>
		</TableRow>
		<TableRow>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/dr_gurpreet_singh"
				android:textColor="#ffffff" />
			<Button
				android:background="@android:color/transparent"
				android:gravity="center"
				android:onClick="callGurpreet"
				android:text="@string/HCall"
				android:textColor="#ffffff" />
			<Button
				android:background="@android:color/transparent"
				android:gravity="center"
				android:onClick="emailGurpreet"
				android:padding="3dip"
				android:text="@string/HEmail"
				android:textColor="#ffffff" />
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/medOffTiming"
				android:textColor="#ffffff" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/consultant"/>

			<Button
				android:text="@string/mobile"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="callMobileSKAgarwal"
				android:gravity="center"
				/>
			<Button
				android:text="@string/clinic"
				android:background="@android:color/transparent"
				android:textColor="#ffffff"
				android:onClick="callClinicSKAgarwal"
				android:gravity="center"
				/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/consTiming"
				android:textColor="#ffffff" />
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/gynac" />
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/gynacTiming"
				android:layout_span="3"/>
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:textColor="#ffffff"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/ped" />
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:text="@string/pedTiming"
				android:textColor="#ffffff"
				android:layout_span="3"/>
		</TableRow>
	</TableLayout>

	<!-- Useful links -->
	<TextView
		android:layout_marginTop="20dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/useful_links"
		android:textSize="25sp"
		android:gravity="center" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2">
		<Button
            android:background="@android:color/transparent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="#03A9F4"
			android:onClick="webHealthCentre"
			android:text="@string/health_centre"
			android:gravity="center"
			android:layout_weight="1"/>
		<Button

            android:background="@android:color/transparent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="#03A9F4"
			android:onClick="webExecutives"
			android:text="@string/executives"
			android:gravity="center"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
