<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:theme="@style/AppTheme"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="8dp"
    android:background="@drawable/background">
	<ScrollView
        android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">
		<LinearLayout
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<Button
				android:id="@+id/emerno"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:text="@string/emergency_numbers"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<LinearLayout
                android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				style="?android:attr/buttonBarStyle">
				<Button
					style="?android:attr/buttonBarButtonStyle"
					android:id="@+id/moodle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@android:color/transparent"
					android:text="@string/moodle"
					android:textSize="27sp"
					android:textColor="@color/buttoncolor"
					android:layout_weight="1"/>
				<Button
					style="?android:attr/buttonBarButtonStyle"
					android:id="@+id/splcourse"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:background="@android:color/transparent"
					android:textSize="22sp"
					android:textColor="@color/buttoncolor"/>
			</LinearLayout>
			<Button
				android:id="@+id/erp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:text="@string/erp"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<Button
				android:id="@+id/koha"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:text="@string/koha"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<Button
				android:id="@+id/jupyter"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="@android:color/transparent"
				android:text="@string/jupyter"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<Button
				android:id="@+id/webmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:text="@string/webmail"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<Button
				android:id="@+id/downloadForms"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="@android:color/transparent"
				android:text="@string/download_forms"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<Button
				android:id="@+id/feedback"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:background="@android:color/transparent"
				android:text="@string/feedback"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
			<Button
				android:id="@+id/iisermap"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:text="@string/iiser_map"
				android:textSize="27sp"
				android:textColor="@color/buttoncolor"/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
        android:layout_width="match_parent"
		android:layout_height="50dp"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/wifipass"
			android:layout_width="0dp"
			android:layout_height="match_parent"
            android:src="@drawable/icon_wifipassword"
			android:scaleType="fitCenter"
			android:layout_weight="1"
			android:contentDescription="@string/wifipasswordbutton"/>
		<ImageView
			android:id="@+id/drive"
			android:layout_width="0dp"
			android:layout_height="match_parent"
            android:src="@drawable/icon_drive"
			android:scaleType="fitCenter"
			android:layout_weight="1"
			android:contentDescription="@string/drivebutton"/>
		<ImageView
			android:id="@+id/upi"
			android:layout_width="0dp"
			android:layout_height="match_parent"
            android:src="@drawable/icon_upi"
			android:scaleType="fitCenter"
			android:layout_weight="1"
			android:contentDescription="@string/upibutton"/>
		<ImageView
			android:id="@+id/manthan"
			android:layout_width="0dp"
			android:layout_height="match_parent"
            android:src="@drawable/icon_manthan"
			android:scaleType="fitCenter"
			android:layout_weight="1"
			android:contentDescription="@string/manthan" />
		<ImageView
			android:id="@+id/settings"
			android:layout_width="0dp"
			android:layout_height="match_parent"
            android:src="@drawable/icon_setting"
			android:scaleType="fitCenter"
			android:layout_weight="1"
			android:contentDescription="@string/settingsbutton"/>
	</LinearLayout>
</LinearLayout>
