<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/amount"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textColorHint="@color/hint"
            android:hint="@string/enter_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="numberDecimal"
            android:lines="1"
            android:imeOptions="actionNext"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/note"
            android:hint="@string/enter_note"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textColorHint="@color/hint"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:inputType="text"
            android:lines="1"
            android:imeOptions="actionGo"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />
        <Button
            android:id="@+id/pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/pay"
            android:textColor="@color/buttoncolor"
            android:textSize="35sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="NestedWeights">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/messes"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="2"/>
            <ProgressBar
                android:id="@+id/messProg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="90"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/messLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="9">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/canteens"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="2"/>
            <ProgressBar
                android:id="@+id/canteenProg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="50"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/canteenLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="9">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/eateries"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="2"/>
            <ProgressBar
                android:id="@+id/eateryProg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="50"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/eateryLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="9">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/store"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:layout_weight="2"/>
            <ProgressBar
                android:id="@+id/storeProg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="50"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/storeLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="9">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="30sp"/>
            <ImageView
                android:contentDescription="@string/reset"
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/reset"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>